--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -1,47 +1,37 @@
+\newgeometry{top=1in,bottom=1in,right=1in,left=1in}
 \begin{center}
-    \includegraphics[width=0.2\textwidth]{figures/unipd.pdf} \\ % Add the university logo here
-    \vspace{0.5cm}
-    
-    \textbf{UNIVERSITÀ DEGLI STUDI DI PADOVA} \\
-    \vspace{0.5cm}
-    
-    \textbf{$department$}\\
-    \vspace{0.5cm}
-    
-    \textbf{$degree$}\\
-    \vspace{1cm}
-    
-    \textbf{$thesis$}\\
-    \vspace{2cm}
-    
-    \textbf{$title-ita$} \\
-    \vspace{1cm}
-    
-    \textbf{$title-eng$} \\
-    \vspace{2.5cm}
-    
-    \begin{flushleft}
-        \textbf{$supervisor-prefix$}\\
-        $supervisor-name$  \\
-        \vspace{0.5cm}
-        
-        \textbf{$cosupervisor-prefix$}\\
-        $cosupervisor-name$ \\
-    \end{flushleft}
-    
-    \vfill
-    
-    \begin{flushright}
-    \begin{tabular}{@{}l@{}}
-    \textbf{$student-prefix$:} $student-name$ \\ \\
-    \textbf{$matricola-prefix$:} $matricola$ \\
-    \end{tabular}
-    \end{flushright}
-    
-    \vspace{1 cm}
-    \begin{center}
-        \textbf{$academic-year-prefix$}\; \textbf{$academic-year$}
-    \end{center}
-\end{center}
+\includegraphics[width=0.2\textwidth]{figures/unipd.pdf}\\
+
+%Per il frontespizio del dipartimenti di Ing. dell'Informazione commentare le riga precedente e decommentare la successiva
+%\includegraphics[scale=0.2]{images/logo_unipd.png} \hfill \includegraphics[scale=0.2]{images/logo_dei.png}\\
+\vspace{0.8cm}
+\textsc{\LARGE Universit\`{a} degli Studi di Padova}\\
+\vspace{0.45cm}
+\textsc{\large $department$}\\
+\vspace{0.4cm}
+\textsc{\large $degree$}\\
+\vspace{1cm}
+\textsc{\large $thesis$}\\
+\vfill
+% Title
+{ \LARGE \bfseries $title-ita$
+}\\
+\vspace{1cm}
+{ \Large $title-eng$
+}\\
+\vfill
+\textit{\large $supervisor-prefix$:} \hfill \textit{\large $student-prefix$:}\\
+\vspace{0.2cm}
+\textsc{\large $supervisor-name$} \hfill \textsc{\large $student-name$}\\
+\vspace{0.2cm}  
+\hfill \textsc{Matricola: $matricola$}\\
+\begin{flushleft}
+\textit{\large $cosupervisor-prefix$:} \\
+\vspace{0.2cm}
+\textsc{\large $cosupervisor-name$} \hfill
+\end{flushleft}
 
 \vfill
+% Bottom of the page
+{\large $academic-year-prefix$ $academic-year$}
+\end{center}
